[package]
name = "led-strip"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.4.0"
log = "0.4.8"
structopt = "0.2.18"
chrono = "0.4.7"
sunrise = "1.0.0"
